--- a/ProHotel/Shared/MainLayout.razor
+++ b/ProHotel/Shared/MainLayout.razor
@@ -4,7 +4,7 @@
 
 <div class="page">
     <div class="App">
-        <div class="row-cols-auto header">
+        <div class="header">
             <div class="logo">
                 <img src="images/logo.png" class="col-md-3 logo" alt="logo"/>
                 <img src="images/flag.png" class="col-md-3 logo" alt="flag"/>
