--- a/ProHotel/wwwroot/css/site.css
+++ b/ProHotel/wwwroot/css/site.css
@@ -1,27 +1,5 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-h1:focus {
-    outline: none;
-}
-
-a, .btn-link {
-    color: #0071c1;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-.content {
-    padding-top: 1.1rem;
-}
-
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
 }
@@ -61,6 +39,13 @@ a, .btn-link {
 
 .blazor-error-boundary::after {
     content: "An error has occurred."
+}
+
+.content {
+    padding-top: 100px;
+    background-color: #1b1b1b;
+    min-height: 100%;
+    min-width: 100%;
 }
 
 .App {
@@ -104,13 +89,6 @@ a, .btn-link {
     color: red;
     font-family: "Comic Sans MS", serif;
     font-size: 10vh;
-}
-
-.content {
-    background-color: #1b1b1b;
-    min-height: 100%;
-    min-width: 100%;
-
 }
 
 .main {
