--- a/ProHotel/Shared/MainLayout.razor
+++ b/ProHotel/Shared/MainLayout.razor
@@ -4,14 +4,14 @@
 
 <div class="page">
     <div class="App">
-        <div class="header">
-            <div class="logo">
-                <img src="images/logo.png" class="col-md-3 logo" alt="logo"/>
-                <img src="images/flag.png" class="col-md-3 logo" alt="flag"/>
+        <div>
+            <div class="logo-bar">
+                <img src="images/logo.png" class="col-md-2" alt="logo"/>
+                <img src="images/flag.png" class="col-md-1 offset-8 flag" alt="flag"/>
             </div>
-            <img src="images/background.jpg" alt="background"/>
         </div>
         <article class="content">
+            <img class="col-md-12 background-image" src="images/background.jpg" alt="background"/>
             @Body
         </article>
     </div>
