Added Rooms Options

--- a/ProHotel/wwwroot/css/site.css
+++ b/ProHotel/wwwroot/css/site.css
@@ -43,7 +43,6 @@
 
 .content {
     padding-top: 100px;
-    background-color: #1b1b1b;
     min-height: 100%;
     min-width: 100%;
 }
@@ -101,4 +100,31 @@
 
 .link {
     color: #61dafb;
+}
+
+.OptionEntry {
+    color: #808080;
+    background-color: #292929;
+    text-align: left;
+    border: 2px #1b1b1b solid;
+    border-radius: 4px;
+    margin-top: 1px;
+    padding: 6px;
+}
+
+.OptionEntryList {
+    list-style-type: none;
+}
+
+.OptionEntryElementList {
+    list-style-type: none;
+}
+
+.OptionButton {
+    width: 100%;
+    height: auto;
+}
+
+ul {
+    padding: 0px;
 }
