--- a/ProHotel/Shared/RoomEntry.razor
+++ b/ProHotel/Shared/RoomEntry.razor
@@ -1,10 +1,10 @@
 ﻿@using ProHotel.Data
 @inject RoomEntryService RoomEntryService
 
-<div class="container main_table col-md-3">
+<div class="container main_table row">
     <div class="row">
         <div class="col-md room_image">
-            <img src="@room.ImageUrl" class="img-fluid" alt="Room image not found">
+            <img src="data:image/png;base64,@room.ImageUrl" class="img-fluid" alt="Room image not found">
         </div>
         <div class="col-md">
             <div class="col-md">
