--- a/ProHotel/Shared/RoomEntry.razor
+++ b/ProHotel/Shared/RoomEntry.razor
@@ -15,7 +15,7 @@
                         <div class="col">Liczba osób: @room.Seats</div>
                     </div>
                     <div class="col">@room.Beds łóżka</div>
-                    <div class="col">Śniadanie w cenie: @room.Breakfast</div>
+                    @* <div class="col">Śniadanie w cenie: @room.Breakfast</div> *@
                 </div>
             </div>
         </div>
