Center search results

--- a/ProHotel/Shared/RoomEntry.razor
+++ b/ProHotel/Shared/RoomEntry.razor
@@ -1,7 +1,7 @@
 ﻿@using ProHotel.Data
 @inject RoomEntryService RoomEntryService
 
-<div class="container main_table row">
+<div class="container main_table">
     <div class="row">
         <div class="col-md room_image">
             <img src="data:image/png;base64,@room.ImageUrl" class="img-fluid" alt="Room image not found">
