--- a/ProHotel/Shared/SearchResult.razor
+++ b/ProHotel/Shared/SearchResult.razor
@@ -2,31 +2,31 @@
 @inject RoomEntryService RoomEntryService;
 
 <div class="search-result">
-    <ul>
-        <h1>CHUJ</h1>
-        @foreach (var entry in _rooms)
-        {
-            <li class="search-result-element">
-                <RoomEntry Room=@entry />
-            </li>
-        }
-    </ul>
+	<h1>CHUJ</h1>
+	<ul class="search-result-list">
+		@foreach (var entry in _rooms)
+		{
+			<li class="search-result-element">
+				<RoomEntry Room=@entry />
+			</li>
+		}
+	</ul>
 </div>
 
 @code {
-    private Room[] _rooms = Array.Empty<Room>();
+	private Room[] _rooms = Array.Empty<Room>();
 
-    protected override async Task OnInitializedAsync()
-    {
-        Room[]? temp = await RoomEntryService.GetRooms();
-        if (temp == null)
-        {
-            _rooms = new Room[] {new Room()};
-        }
-        else
-        {
-            _rooms = temp;
-        }
-    }
+	protected override async Task OnInitializedAsync()
+	{
+		Room[]? temp = await RoomEntryService.GetRooms();
+		if (temp == null)
+		{
+			_rooms = new Room[] {new Room()};
+		}
+		else
+		{
+			_rooms = temp;
+		}
+	}
 
 }
