--- a/ProHotel/Shared/RoomEntry.razor.css
+++ b/ProHotel/Shared/RoomEntry.razor.css
@@ -1,20 +1,47 @@
 ﻿.room_image {
-    display: block;
-    text-align: center;
-    max-width: 150px;
-    max-height: 150px;
+    /*margin-right: 3%;*/
 }
 
 .small_info {
-    /*font-size: 15px;*/
+    font-size: 15px;
+    margin-top: 10%;
+    text-align: left;
+}
+
+.addons_list {
+    list-style: none;
+}
+
+.small-info-element {
+    padding: 0px 0px 0px 0px;
+}
+
+ul#addons_list {
+    min-width: 696px;
+    list-style: none;
+    padding-top: 20px;
+}
+
+    ul#addons_list li {
+        display: inline;
+    }
+
+.room-variant {
+    text-align: right;
 }
 
 .main_table {
     border-style: solid;
     border-color: #ffa31a;
     background-color: white;
+    font-size: 30px;
 }
 
 .image {
     text-align: center;
+}
+
+.room-title {
+    font-size: 40px;
+    color: #494949;
 }
