--- a/ProHotel/Pages/Index.razor
+++ b/ProHotel/Pages/Index.razor
@@ -2,5 +2,6 @@
 
 <PageTitle>ProHotel</PageTitle>
 
-<SearchResult Random="false"/>
-<SearchResult Random="true"/>
+<SearchField/>
+@* <SearchResult Random="true"/> *@
+
