--- a/ProHotel/wwwroot/css/site.css
+++ b/ProHotel/wwwroot/css/site.css
@@ -142,6 +142,16 @@ ul {
     background-color: #ffa31a;
 }
 
+.input-data {
+    text-align: center;
+    color: white;
+    background-color: #292929;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 1%;
+    width: 80%;
+}
+
 .input-date {
     text-align: center;
     color: white;
@@ -155,7 +165,7 @@ ul {
     text-align: center;
     color: white;
     background-color: #292929;
-    width: 7%;
+    width: 35%;
     margin-right: 1%;
 }
 
@@ -164,7 +174,7 @@ ul {
     color: white;
     background-color: #808080;
     margin-left: 3%;
-    width: 14%;
+    width: 45%;
 }
 
 .search-result {
