--- a/ProHotel/Shared/OptionEntry.razor
+++ b/ProHotel/Shared/OptionEntry.razor
@@ -6,7 +6,7 @@
     <ul>
     @foreach(var value in Option.values)
     {
-        <li class="OptionEntryElementList"><input type="checkbox"> @value</li>
+        <li class="OptionEntryList"><input type="checkbox"> @value</li>
     }
     </ul>
 </div>
