--- a/ProHotel/Shared/SearchResult.razor
+++ b/ProHotel/Shared/SearchResult.razor
@@ -6,6 +6,10 @@
 	{
 		<h1>Znaleziono @roomsCount @text</h1>
 	}
+	else
+	{
+		<h1>Przykładowe pokoje</h1>
+	}
 	<ul class="search-result-list">
 		@foreach (var entry in _rooms)
 		{
@@ -25,8 +29,8 @@
 	[Parameter]
 	public bool Random { get; set; }
 
-    [Parameter]
-    public SearchRoomJSON SearchField { get; set; }
+	[Parameter]
+	public SearchRoomJSON SearchField { get; set; }
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -35,15 +39,16 @@
 		text = roomsCount > 4 ? "pokoi" : roomsCount > 1 ? "pokoje" : roomsCount < 1 ? "pokoi" : "pokój";
 	}
 
-    protected override async void OnParametersSet()
-    {
-        await base.OnParametersSetAsync();
-        
-        if (SearchField == null)
-            return;
-        
-        _rooms = await RoomEntryService.GetRooms(SearchField);
-        roomsCount = _rooms.Length;
-        text = roomsCount > 4 ? "pokoi" : roomsCount > 1 ? "pokoje" : roomsCount < 1 ? "pokoi" : "pokój";
-    }
+	protected override async void OnParametersSet()
+	{
+		await base.OnParametersSetAsync();
+
+		if (SearchField == null)
+			return;
+
+		_rooms = await RoomEntryService.GetRooms(SearchField);
+		roomsCount = _rooms.Length;
+		text = roomsCount > 4 ? "pokoi" : roomsCount > 1 ? "pokoje" : roomsCount < 1 ? "pokoi" : "pokój";
+	}
+
 }
