--- a/ProHotel/Shared/SearchResult.razor
+++ b/ProHotel/Shared/SearchResult.razor
@@ -30,7 +30,7 @@
 	public bool Random { get; set; }
 
 	[Parameter]
-	public SearchRoomJSON SearchField { get; set; }
+	public SearchRoomJSON? SearchField { get; set; }
 
 	protected override async Task OnInitializedAsync()
 	{
