--- a/ProHotel/Shared/SearchResult.razor
+++ b/ProHotel/Shared/SearchResult.razor
@@ -26,8 +26,8 @@
 	public int roomsCount = 0;
 	public string text = "";
 
-	[Parameter]
-	public bool Random { get; set; }
+    [Parameter]
+    public bool Random { get; set; } = false;
 
 	[Parameter]
 	public SearchRoomJSON? SearchField { get; set; }
