--- a/ProHotel/Shared/ReservationWindow.razor
+++ b/ProHotel/Shared/ReservationWindow.razor
@@ -35,7 +35,7 @@
     public EventCallback OnExit { get; set; }
 
     [Parameter]
-    public EventCallback OnReservation { get; set; }
+    public EventCallback<bool> OnReservation { get; set; }
 
     [Parameter]
     public int RoomId { get; set; }
@@ -48,15 +48,15 @@
     void Reserve()
     {
         ReservationService.ReservationData data = ReservationService.ReservationData.Empty;
-        data.from = startDate.ToString();
-        data.to = endDate.ToString();
+        data.from = startDate.ToString().Substring(0,10).Replace('.','-');
+        data.to = endDate.ToString().Substring(0,10).Replace('.','-');
         data.room_id = RoomId;
         data.client_id.client_id = (int)reservationModel.Telephone;
         data.client_id.name = reservationModel.Name;
         data.client_id.surname = reservationModel.Surname;
         data.client_id.telephone = reservationModel.Telephone;
-        ReservationService.GetReservationsAsync(data);
-        OnReservation.InvokeAsync();
+        bool result = ReservationService.GetReservationsAsync(data).Result;
+        OnReservation.InvokeAsync(result);
     }
     
     public class ReservationModel
